--- a/winter.html
+++ b/winter.html
@@ -12,18 +12,18 @@
 </head>
 <body>
 
-<div class="container-fluid">
-  <div class="row content pattern-zigzag-xl">
-    <div class="col-sm-3 sidenav">
-     <img src="img/Asset 1.png" class="creature">
+<div class="container-fluid" style="background-color: #909AB7">
+  <div class="row content pattern-horizontal-stripes-xl">
+    <div class="col-sm-3 sidenav" style="background-color: #9ac6d4">
+     <img src="img/Asset 4.png" class="creature">
      <!-- I SPENT WAY TOO LONG TRYING TO GET THE CREATURE TO BE CENTERED HORIZONTALLY -->
-     <ul class="nav nav-pills nav-stacked">
-      <li class="active"><a href="#index.html">Spring</a></li>
-      <li><a href="summer.html">Summer</a></li>
-      <li><a href="fall.html">Fall</a></li>
-      <li><a href="winter.html">Winter</a></li>
-    </ul><br>
-  </div>
+      <ul class="nav nav-pills nav-stacked">
+        <li><a href="index.html">Spring</a></li>
+        <li><a href="summer.html">Summer</a></li>
+        <li><a href="fall.html">Fall</a></li>
+        <li  class="active"><a href="winter.html">Winter</a></li>
+      </ul><br>
+    </div>
 
     <div class="col-sm-9">
       <h2>TITLE</h2>
@@ -46,48 +46,3 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="index.js"></script>
 </html>
-
-<!-- <!DOCTYPE html>
-<html>
-<head>
-<title> Season Thingy </title>
-<meta name ="viewport" content ="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
-<script src ="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src ="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"></script>
-<link href="css/style.css" rel="stylesheet" />
-      <link href="https://unpkg.com/pattern.css" rel="stylesheet">
-</head>
-<body>
-<div class="row">
-<div class="col-9">
-<div class="container">
-The Web Content in detail.
-</div>
-<div class ="container">
-<p> The vertical menu can place the left or right side of the web pages. <br> But the default vertical menu placed on the left side. </P>
-</div>
-</div>
-<div class="col-3">
-<nav class ="navbar bg-light">
-<ul class ="nav navbar-nav">
-<li class ="nav-item">
-<a class ="nav-link" href="#"> Home </a>
-</li>
-<li class ="nav-item">
-<a class ="nav-link" href="#"> Services </a>
-</li>
-<li class ="nav-item">
-<a class ="nav-link" href="#"> Contact </a>
-</li>
-<li class ="nav-item">
-<a class ="nav-link" href="#"> Blogs </a>
-</li>
-</ul>
-</nav>
-</div>
-</div>
-</body>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
-<script src="index.js"></script>
-</html> -->
